--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -8,7 +8,7 @@ img {
 /* Hero Section */
 
 #Hero-Section {
-  background-image: url("../img/bg-hero.jpg");
+  background-image: url("../img/serena.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: left;
